grow-mushroom use cases added