@@ -27,62 +27,88 @@ public class Tecton implements IActive {
     // GETTERS-SETTERS--------------------------------------------------------------
 
     public void addNeighbor(Tecton tecton) {
+        Skeleton.printCall(this, List.of(tecton));
         neighbors.addLast(tecton);
+        Skeleton.printReturn();
     }
 
     public List<Tecton> getNeighbors() {
+        Skeleton.printCall(this);
+        Skeleton.printReturn(neighbors);
         return neighbors;
     }
 
     public void removeNeighbor(Tecton tecton) {
+        Skeleton.printCall(this, List.of(tecton));
         neighbors.remove(tecton);
+        Skeleton.printReturn();
     }
 
     public List<Mycelium> getMycelia() {
+        Skeleton.printCall(this);
+        Skeleton.printReturn(mycelia);
         return mycelia;
     }
 
     public void addInsect(Insect insect) {
+        Skeleton.printCall(this, List.of(insect));
         insects.add(insect);
+        Skeleton.printReturn();
     }
 
     public void removeInsect(Insect insect) {
+        Skeleton.printCall(this);
         insects.remove(insect);
+        Skeleton.printReturn();
     }
 
     public void addSpore(Spore spore) {
+        Skeleton.printCall(this, List.of(spore));
         spores.add(spore);
+        Skeleton.printReturn();
     }
 
     public Spore takeSpore() {
-        return spores.isEmpty() ? null : spores.remove(0);
+        Skeleton.printCall(this);
+        var ret = spores.isEmpty() ? null : spores.removeLast();
+        Skeleton.printReturn(ret);
+        return ret;
     }
 
     // -----------------------------------------------------------------------------
 
     public void fillWithStuff(List<Spore> spores, Mushroom mushroom, List<Insect> insects, List<Tecton> neighbors) {
+        Skeleton.printCall(this, List.of(spores, mushroom, insects, neighbors));
         this.spores.addAll(spores);
         this.mushroom = mushroom;
         this.insects.addAll(insects);
         this.neighbors.addAll(neighbors);
+        Skeleton.printReturn();
     }
 
     public boolean hasMyceliumTo(Tecton tecton) {
+        Skeleton.printCall(this, List.of(tecton));
         for (Mycelium m : mycelia) {
             Tecton[] ends = m.getEnds();
             if (ends[0] == tecton || ends[1] == tecton) {
+                Skeleton.printReturn(true);
                 return true;
             }
         }
+        Skeleton.printReturn(false);
         return false;
     }
 
     public boolean canGrowMyceliumFrom(Fungus fungus) { // NOSONAR this param is needed in the specialized classes
+        Skeleton.printCall(this, List.of(fungus));
+        Skeleton.printReturn(true);
         return true;
     }
 
     public int distanceTo(Tecton tecton) {
+        Skeleton.printCall(this, List.of(tecton));
         if (tecton == this) {
+            Skeleton.printReturn(0);
             return 0;
         }
         HashSet<Tecton> done = new HashSet<>();
@@ -94,6 +120,7 @@ public class Tecton implements IActive {
             for (Tecton t : toVisit) {
                 for (Tecton neighbor : t.neighbors) {
                     if (neighbor == tecton) {
+                        Skeleton.printReturn(dst);
                         return dst;
                     }
                     if (!done.contains(neighbor)) {
@@ -105,37 +132,49 @@ public class Tecton implements IActive {
             toVisit.addAll(nN);
             dst++;
         }
+        Skeleton.printReturn(Integer.MAX_VALUE);
         return Integer.MAX_VALUE;
     }
 
     public Tecton newMe() {
-        return new Tecton();
+        Skeleton.printCall(this);
+        var nt = new Tecton();
+        Skeleton.printReturn(nt);
+        return nt;
     }
 
     public void growMushroom(Fungus fungus) {
+        Skeleton.printCall(this);
         if (mushroom == null) {
             mushroom = new Mushroom(fungus, this);
         }
+        Skeleton.printReturn();
     }
 
     private boolean myceliumExists(Fungus fungus, Tecton t1, Tecton t2) {
+        Skeleton.printCall(this, List.of(fungus, t1, t2));
         for (Mycelium m : mycelia) {
             if (m.getSpecies() == fungus && (Arrays.equals(m.getEnds(), new Tecton[] { t1, t2 })
                     || Arrays.equals(m.getEnds(), new Tecton[] { t2, t1 }))) {
+                Skeleton.printReturn(true);
                 return true;
             }
         }
+        Skeleton.printReturn(false);
         return false;
     }
 
     public void growMycelium(Fungus fungus, Tecton target) {
+        Skeleton.printCall(this, List.of(fungus, target));
         if (canGrowMyceliumFrom(fungus) && target.canGrowMyceliumFrom(fungus)
                 && !myceliumExists(fungus, this, target)) {
-            new Mycelium(fungus, this, target);
+            Skeleton.addObject(new Mycelium(fungus, this, target), "my1");
         }
+        Skeleton.printReturn();
     }
 
-    public void tectonBreak() {
+    private void tectonBreak() {
+        Skeleton.printCall(this);
         for (Tecton n : neighbors) {
             n.removeNeighbor(this);
         }
@@ -144,6 +183,9 @@ public class Tecton implements IActive {
         }
         var t1 = newMe();
         var t2 = newMe();
+
+        Skeleton.addObject(t1, "t1");
+        Skeleton.addObject(t2, "t2");
 
         var t1Neighbors = neighbors.subList(0, neighbors.size() / 2 - 1);
         t1Neighbors.add(t2);
@@ -156,14 +198,16 @@ public class Tecton implements IActive {
         t2.fillWithStuff(spores.subList(spores.size() / 2, spores.size() - 1), null,
                 insects.subList(insects.size() / 2, insects.size() - 1),
                 t2Neighbors);
+
+        Skeleton.printReturn();
     }
 
     @Override
     public void tick(double dT) {
-        // TODO: logic to determine if tecton is breaking
-        boolean breaking = false;
-        if (breaking) {
+        Skeleton.printCall(this, List.of(dT));
+        if (dT >= 1) {
             tectonBreak();
         }
+        Skeleton.printReturn();
     }
 }
